--- a/CareFinder.Server/Properties/launchSettings.json
+++ b/CareFinder.Server/Properties/launchSettings.json
@@ -13,7 +13,8 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
+      "launchUrl": "Swagger",
       "applicationUrl": "https://localhost:7170;http://localhost:5016",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
